Fix z-index

--- a/assets/css/bmenu.scss
+++ b/assets/css/bmenu.scss
@@ -12,6 +12,7 @@ html, body {
 @import 'icons';
 .bmenu {
   position: fixed;
+  z-index: 99999;
   width: 100%;
   top: 0;
   left: 0;
